--- a/ifwlrc.html
+++ b/ifwlrc.html
@@ -43,7 +43,6 @@
       overflow-x:hidden;
     }
 
-    /* subtle overlay for readability on busy bg */
     body:before{
       content:"";
       position:fixed; inset:0;
@@ -60,7 +59,6 @@
       margin: 16px auto 28px;
     }
 
-    /* HEADER / AUTH CENTER */
     .topbar{
       display:flex;
       align-items:center;
@@ -143,7 +141,6 @@
       font-family: var(--mono);
     }
 
-    /* right status */
     .statusStrip{
       display:flex;
       flex-direction:column;
@@ -203,7 +200,6 @@
       white-space: pre-wrap;
     }
 
-    /* PANELS */
     .panel{
       border:1px solid var(--line);
       border-radius: var(--radius);
@@ -250,7 +246,6 @@
       padding: 12px 14px 14px;
     }
 
-    /* BUTTONS */
     button{
       border:none;
       cursor:pointer;
@@ -277,7 +272,6 @@
       background: rgba(220,38,38,.10);
     }
 
-    /* LAYOUT SECTIONS */
     .stack{
       display:flex;
       flex-direction:column;
@@ -285,7 +279,6 @@
       margin-top: 14px;
     }
 
-    /* BROADCAST */
     .msgRow{
       display:flex;
       gap:10px;
@@ -315,7 +308,6 @@
       line-height:1.25;
     }
 
-    /* COMMAND GRID */
     .cmdGrid{
       display:grid;
       grid-template-columns: repeat(12, 1fr);
@@ -397,7 +389,6 @@
       .cmd{ grid-column: span 12; }
     }
 
-    /* pills */
     .minirow{
       margin-top: 12px;
       display:flex;
@@ -419,7 +410,6 @@
     .bad{color:#991b1b}
     .warn{color:#92400e}
 
-    /* check-in list */
     .list{
       margin:0;
       padding:0;
@@ -445,7 +435,6 @@
     .itemName{ font-weight:1000; }
     .itemTime{ opacity:.78; }
 
-    /* Quali Split Scheduler (inside Flag panel) */
     .grid{
       display:grid;
       grid-template-columns: 1fr;
@@ -508,7 +497,26 @@
       line-height:1.25;
     }
 
-    /* sticky status on mobile */
+    /* NEW: small password editor row */
+    .pwRow{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      align-items:center;
+      margin-top: 10px;
+    }
+    .pwRow input{
+      flex: 1 1 280px;
+      padding: 11px 12px;
+      border-radius: 12px;
+      border: 1px solid rgba(15,23,42,.12);
+      background: rgba(255,255,255,.92);
+      color: var(--text);
+      outline:none;
+      font-family: var(--mono);
+      font-size: 12.5px;
+    }
+
     @media (max-width: 560px){
       .statusBox{
         position: sticky;
@@ -521,7 +529,6 @@
 </head>
 <body>
   <div class="wrap">
-    <!-- AUTHORISATION CENTER TOP -->
     <div class="topbar">
       <div class="brand">
         <img src="ifwl_logo.png" alt="IFWL Logo" />
@@ -554,7 +561,6 @@
     </div>
 
     <div class="stack">
-      <!-- BROADCAST MESSAGE TOP (2ND DOWN) -->
       <div class="panel">
         <div class="panelHeader">
           <div class="panelTitle">Send Message to All Drivers <span class="chip">Shows 20s</span></div>
@@ -571,7 +577,6 @@
         </div>
       </div>
 
-      <!-- FLAG & SERVER CONTROL (WITH SPLITS INSIDE) -->
       <div class="panel">
         <div class="panelHeader">
           <div class="panelTitle">Flag &amp; Server Control <span class="chip">Live Commands</span></div>
@@ -607,6 +612,15 @@
                 <div class="tag">PIT NOW</div>
               </div>
               <div class="desc">Enter pits now. Keep formation at pit exit line. No overtakes unless instructed.</div>
+            </button>
+
+            <button class="cmd blue span6" id="btnVscEnd" type="button">
+              <span class="stripe" aria-hidden="true"></span>
+              <div class="hdr">
+                <div class="name">VSC ENDING</div>
+                <div class="tag">RETURN TO RACE PACE</div>
+              </div>
+              <div class="desc">Shows a 30s “Return to Race Pace” countdown on SimHub, then auto-reverts to the last flag.</div>
             </button>
 
             <button class="cmd green span6" id="btnGreen" type="button">
@@ -660,7 +674,24 @@
             <span class="pill" id="checkinPill">Check-ins: —</span>
           </div>
 
-          <!-- SPLIT SYSTEM INSIDE FLAG & SERVER CONTROL -->
+          <!-- NEW: Server password control -->
+          <div class="panel" style="margin-top:14px; background: rgba(255,255,255,.72);">
+            <div class="panelHeader">
+              <div class="panelTitle">Server Password Message <span class="chip">Custom</span></div>
+              <div class="panelBtns">
+                <button class="btn" id="btnSendPassword" type="button">Send Password</button>
+                <button class="btn danger" id="btnClearPassword" type="button">Clear</button>
+              </div>
+            </div>
+            <div class="panelBody">
+              <div class="pwRow">
+                <input id="serverPasswordInput" type="text" maxlength="64" placeholder="Type server password…" />
+              </div>
+              <div class="hint">This displays on SimHub as: <b>Password is: YOURPASSWORD</b></div>
+            </div>
+          </div>
+
+          <!-- SPLIT SYSTEM -->
           <div class="panel" style="margin-top:14px; background: rgba(255,255,255,.72);">
             <div class="panelHeader">
               <div class="panelTitle">Quali Split Scheduler <span class="chip">1–3 splits</span></div>
@@ -737,7 +768,6 @@
         </div>
       </div>
 
-      <!-- CHECK-INS PANEL (still present) -->
       <div class="panel">
         <div class="panelHeader">
           <div class="panelTitle">Race Check-ins <span class="chip">Live</span></div>
@@ -774,6 +804,11 @@
     const btnClearToken = document.getElementById("btnClearToken");
 
     const btnCheckIn = document.getElementById("btnCheckIn");
+    const btnVscEnd = document.getElementById("btnVscEnd");
+
+    const serverPasswordInput = document.getElementById("serverPasswordInput");
+    const btnSendPassword = document.getElementById("btnSendPassword");
+    const btnClearPassword = document.getElementById("btnClearPassword");
 
     const checkinListEl = document.getElementById("checkinList");
     const btnRefreshCheckins = document.getElementById("btnRefreshCheckins");
@@ -781,11 +816,9 @@
 
     const btnGreenConsole = document.getElementById("btnGreenConsole");
 
-    // Broadcast
     const broadcastText = document.getElementById("broadcastText");
     const btnSendBroadcast = document.getElementById("btnSendBroadcast");
 
-    // Quali scheduler controls
     const btnStartQuali = document.getElementById("btnStartQuali");
     const btnStopQuali = document.getElementById("btnStopQuali");
 
@@ -805,13 +838,16 @@
       document.getElementById("btnRed"),
       document.getElementById("btnVscSlow"),
       document.getElementById("btnVscPit"),
+      btnVscEnd,
       document.getElementById("btnGreen"),
       document.getElementById("btnReset"),
       document.getElementById("btnCheckIn"),
       btnGreenConsole,
       btnSendBroadcast,
       btnStartQuali,
-      btnStopQuali
+      btnStopQuali,
+      btnSendPassword,
+      btnClearPassword
     ];
 
     endpointPill.textContent = `Endpoint: ${WORKER_BASE}`;
@@ -827,7 +863,6 @@
       btnClearCheckins.disabled = isBusy;
     }
 
-    // --- UI helpers for header live badge ---
     const liveDot = document.getElementById("liveDot");
     const opsBadge = document.getElementById("opsBadge");
 
@@ -956,9 +991,59 @@
       }
     }
 
-    // Broadcast
+    // NEW: VSC ending countdown (30s, then auto revert handled by Worker)
+    async function triggerVscEnding(){
+      setBusy(true);
+      statusEl.textContent = "Sending VSC ENDING (30s countdown)…";
+      try{
+        const data = await postAuthed("/vsc_end", { seconds: 30 });
+        statusEl.textContent = `OK — VSC Ending started @ ${fmt(data?.updatedAt || Date.now())}`;
+        await new Promise(r => setTimeout(r, 150));
+        const fresh = await getState();
+        updateCurrentPill(fresh);
+      }catch(e){
+        statusEl.textContent = `ERROR — Could not start VSC Ending: ${e.message}`;
+      }finally{
+        setBusy(false);
+      }
+    }
+
+    // NEW: Server password message
     function normMsg(v){ return String(v || "").replace(/\s+/g, " ").trim(); }
 
+    async function sendServerPassword(){
+      const pw = normMsg(serverPasswordInput.value);
+      if(!pw){
+        statusEl.textContent = "ERROR — Type a server password first.";
+        serverPasswordInput.focus();
+        return;
+      }
+      setBusy(true);
+      statusEl.textContent = "Sending server password to SimHub…";
+      try{
+        await postAuthed("/server_password", { password: pw });
+        statusEl.textContent = `OK — Password sent @ ${fmt(Date.now())}`;
+      }catch(e){
+        statusEl.textContent = `ERROR — Could not send password: ${e.message}`;
+      }finally{
+        setBusy(false);
+      }
+    }
+
+    async function clearServerPassword(){
+      setBusy(true);
+      statusEl.textContent = "Clearing server password message…";
+      try{
+        await postAuthed("/server_password/clear", { ok:true });
+        statusEl.textContent = `OK — Password cleared @ ${fmt(Date.now())}`;
+      }catch(e){
+        statusEl.textContent = `ERROR — Could not clear password: ${e.message}`;
+      }finally{
+        setBusy(false);
+      }
+    }
+
+    // Broadcast
     async function sendBroadcast(){
       const msg = normMsg(broadcastText.value);
       if(!msg){
@@ -1033,7 +1118,6 @@
         }
       }
 
-      // Orders must be unique and sequential from 1..N
       const orders = enabled.map(x => x.order);
       const uniq = new Set(orders);
       if(uniq.size !== orders.length){
@@ -1165,6 +1249,7 @@
     document.getElementById("btnRed").addEventListener("click", ()=>setState("red"));
     document.getElementById("btnVscSlow").addEventListener("click", ()=>setState("vsc_slow"));
     document.getElementById("btnVscPit").addEventListener("click", ()=>setState("vsc_pit"));
+    btnVscEnd.addEventListener("click", triggerVscEnding);
     document.getElementById("btnGreen").addEventListener("click", ()=>setState("green"));
     document.getElementById("btnReset").addEventListener("click", ()=>setState("server_reset"));
 
@@ -1180,6 +1265,15 @@
       if((e.ctrlKey || e.metaKey) && e.key === "Enter"){
         e.preventDefault();
         sendBroadcast();
+      }
+    });
+
+    btnSendPassword.addEventListener("click", sendServerPassword);
+    btnClearPassword.addEventListener("click", clearServerPassword);
+    serverPasswordInput.addEventListener("keydown", (e) => {
+      if((e.ctrlKey || e.metaKey) && e.key === "Enter"){
+        e.preventDefault();
+        sendServerPassword();
       }
     });
 
@@ -1208,7 +1302,7 @@
       }
     });
 
-    // --- Live feed: SSE first, fallback polling if SSE fails ---
+    // Live feed: SSE first, fallback polling
     let pollTimer = null;
 
     function startPolling(){
@@ -1262,7 +1356,7 @@
       }
     }
 
-    // Check-in auto-refresh loop
+    // Check-in auto-refresh
     let checkinTimer = null;
     function startCheckinAutoRefresh(){
       if(checkinTimer) return;
